Toolbox: Camera button support
Add support for camera button

Based on commit http://review.cyanogenmod.org/#/c/52046/

This patch adds:
- Use camera button as wake key
- Use focus button as peek and wake key
- Use camera button to launch (secure) camera

Change-Id: Idb959f24fec880d360afebf194a0bc573e011438

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="menu_key_title">Menu button</string>
     <string name="assist_key_title">Search button</string>
     <string name="appswitch_key_title">Recents button</string>
+    <string name="camera_key_title">Camera button</string>
     <string name="volume_keys_title">Volume buttons</string>
 
     <!-- Hardware key rebinding -->
@@ -77,6 +78,12 @@
     <string name="action_sleep">Turn screen off</string>
     <string name="action_last_app">Last app</string>
     <string name="action_split_screen">Split screen</string>
+
+    <!-- Camera key actions -->
+    <string name="camera_sleep_on_release_title">Screen peek</string>
+    <string name="camera_sleep_on_release_summary">A half press will keep the screen on only while the button is held down</string>
+    <string name="camera_launch_title">Launch camera</string>
+    <string name="camera_launch_summary">A longpress and release will launch camera</string>
 
     <!-- Volume key music controls -->
     <string name="volbtn_music_controls_title">Control playback</string>
