Toolbox: update of battery options
Change-Id: Ia1e0fb213ddb1e489bd918d48460d016ab6f7a02

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -91,9 +91,17 @@
     <string name="pref_statusbar_icons_summary">Settings to control statusbar icons</string>
     <string name="pref_statusbar_batt_style_title">Battery style</string>
     <string name="pref_statusbar_batt_style_summary">Choose a battery icon style</string>
-    <string name="pref_statusbar_batt_style_stock">Stock</string>
-    <string name="pref_statusbar_batt_style_percent">Stock w/ percentage</string>
+    <string name="pref_statusbar_batt_style_portrait">Portrait</string>
+    <string name="pref_statusbar_batt_style_landscape">Landscape</string>
+    <string name="pref_statusbar_batt_style_circle">Circle</string>
+    <string name="pref_statusbar_batt_style_dotted_circle">Dotted Circle</string>
+    <string name="pref_statusbar_batt_style_text">Text</string>
     <string name="pref_statusbar_batt_style_hidden">Hidden</string>
+    <string name="pref_statusbar_batt_percent_title">Battery percent</string>
+    <string name="pref_statusbar_batt_percent_summary">Choose a battery percent style</string>
+    <string name="pref_statusbar_batt_percent_hidden">Hidden</string>
+    <string name="pref_statusbar_batt_percent_inside">Inside</string>
+    <string name="pref_statusbar_batt_percent_outside">Outside</string>
     <string name="pref_statusbar_clock_am_pm_style_title">Clock AM/PM style</string>
     <string name="pref_statusbar_clock_am_pm_style_summary">Choose a clock AM/PM style</string>
     <string name="pref_statusbar_clock_am_pm_style_normal">Normal</string>
