Switch in settings menu switchable via toolbox (1 of 3)
Change-Id: Ie3bc15d2a2039d74be59112373fbc1faa72161cf

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -68,6 +68,8 @@
     <string name="pref_interface_fancy_ui_title">Force fancy ui elements</string>
     <string name="pref_interface_fancy_ui_summary">Transparent status bar and other resource intensive chrome</string>
     <string name="pref_interface_fancy_ui_reboot_message">Must reload system resources</string>
+    <string name="pref_interface_settings_switch_toggle_title">Toggle Setting Menu Switch</string>
+    <string name="pref_interface_settings_switch_toggle_summary">This will toggle displaying a switch inside the main Settings menu </string>
 
     <!-- Interface >> Rotation -->
 
