Toolbox: add support for time contextual status bar headers
 - Squashed commit of the following:
     https://github.com/DirtyUnicorns/android_packages_apps_DU-Tweaks/commit/b6401648fa594f16ebed82b59bc3c2fb4b0a098a
     https://github.com/DirtyUnicorns/android_packages_apps_DU-Tweaks/commit/eb065f670117a47388dca1614607d6a8257e862d
     https://github.com/DirtyUnicorns/android_packages_apps_DU-Tweaks/commit/83ac587a289098092eff05fb657f3ade189b20e8
     https://github.com/DirtyUnicorns/android_packages_apps_DU-Tweaks/commit/dba1cbd80ca725dace0029acd777656bbd8c76bc
 - Adapted to EVToolbox naming structure

Change-Id: I77a4547aa1f36b177bc0a8139dd2639e8a73d4b0

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -115,6 +115,8 @@
     <string name="pref_statusbar_clock_am_pm_style_gone">Hidden</string>
     <string name="pref_statusbar_quick_pulldown_title">Quick QS Pulldown</string>
     <string name="pref_statusbar_quick_pulldown_summary">Expand Quick Settings in a single swipe</string>
+    <string name="pref_statusbar_custom_header_title">Time Contextual Header</string>
+    <string name="pref_statusbar_custom_header_summary">Enable notification panel header image</string>
 
     <!-- System >> Network -->
     <string name="system_network_title">Network</string>
