EVToolbox: add status bar settings
Change-Id: I6efc1eaa44b08f0eab53d919b815b2b1cc4f836b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -138,4 +138,11 @@
     <string name="navigation_bar_category">Navigation bar</string>
     <string name="navigation_bar_title">Buttons and layout</string>
 
+    <!-- Status bar -->
+    <string name="status_bar_title">Status bar</string>
+
+    <!-- Status bar - icon blacklist -->
+    <string name="status_bar_icons_title">Status bar icons</string>
+    <string name="status_bar_icons_summary">Control which status bar icons are shown</string>
+
 </resources>
