--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -157,6 +157,13 @@
     <!-- Status bar - Battery -->
     <string name="status_bar_battery_title">Battery indicator</string>
 
+    <!-- Status bar - Battery meter style -->
+    <string name="status_bar_battery_style_title">Battery status style</string>
+    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
+    <string name="status_bar_battery_style_circle">Circle</string>
+    <string name="status_bar_battery_style_text">Text</string>
+    <string name="status_bar_battery_style_hidden">Hidden</string>
+
     <!-- Status bar - Battery percentage -->
     <string name="status_bar_battery_percentage_title">Battery percentage</string>
     <string name="status_bar_battery_percentage_default">Hidden</string>
