Toolbox: adjust superuser
 This change moves from a switch preference
 to a listpreference. Giving further control over
 what has superuser access. Original idea from CM,
 adapted for ev toolbox. Default action, disabled.
 https://github.com/CyanogenMod/android_packages_apps_Settings/commit/9c512949b5cf487703a75abc7a56d0d98df59e32

Change-Id: I50034ec672bdedea0c981e30d618dbce3b9fd99c

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -156,10 +156,14 @@
     <!-- Superuser -->
 
     <!-- Superuser >> Security -->
+
     <string name="superuser_security_title">Security</string>
-    <string name="pref_superuser_superuser_access_title">Superuser access</string>
-    <string name="pref_superuser_superuser_access_summary_on">Apps are allowed to access Superuser</string>
-    <string name="pref_superuser_superuser_access_summary_off">Apps are not allowed to access Superuser</string>
+
+    <string name="pref_superuser_access_title">Superuser access</string>
+    <string name="pref_superuser_access_disabled">Disabled</string>
+    <string name="pref_superuser_access_apps_only">Apps only</string>
+    <string name="pref_superuser_access_adb_only">ADB only</string>
+    <string name="pref_superuser_access_apps_adb">Apps and ADB</string>
 
     <string name="pref_superuser_auto_response_title">Automatic response</string>
     <string name="pref_superuser_auto_response_prompt_summary">Set to prompt</string>
