--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -114,6 +114,22 @@
     <string name="cpu_set_on_boot">Set on boot</string>
     <string name="cpu_set_on_boot_summary">Restore the processor settings on boot</string>
 
+    <!-- Performance >> Profiles -->
+    <string name="perf_profile_category_title">Performance Profiles</string>
+    <string name="perf_profile_settings_summary">Adjust power saving features and device performance</string>
+    <string name="perf_profile_overview_summary">Current profile: <xliff:g id="perf_profile_name">%1$s</xliff:g></string>
+    <string name="perf_profile_title">Performance profile: <xliff:g id="perf_profile_name">%1$s</xliff:g></string>
+    <string name="perf_profile_fail_toast">The performance profile is currently unavailable</string>
+    <string name="power_save_category_title">Battery saving</string>
+    <string name="power_save_title">Extreme power saver</string>
+    <string name="power_save_summary">Restrict device performance and background activity to save power</string>
+    <string name="auto_power_save_title">Automatic power saver</string>
+    <string name="auto_power_save_summary_on">Automatically enable power save mode at %s battery</string>
+    <string name="auto_power_save_summary_off">Do not enable power save mode automatically</string>
+    <string name="app_perf_profiles_title">Automatic optimization</string>
+    <string name="app_perf_profiles_summary">Automatically choose an appropriate performance profile for applications and usage patterns</string>
+    <string name="auto_power_save_never">Never</string>
+
     <!-- Statusbar -->
     <string name="statusbar_settings_title">Statusbar</string>
 
