--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,8 +18,11 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- Generic Strings, multiple uses -->
+    <!-- App name, basic summary -->
     <string name="app_name">Toolbox</string>
+    <string name="app_summary">Customize additional features</string>
+
+    <!-- Generic Strings, multiple uses -->
     <string name="apply">Apply</string>
     <string name="cancel">Cancel</string>
     <string name="flash">Flash</string>
