--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -66,6 +66,7 @@
     <string name="pref_power_menu_screenshot_delay_title">Set screenshot delay</string>
 
     <!-- Statusbar -->
+    <string name="statusbar_qs_title">Quick Settings</string>
 
     <!-- Statusbar >> General -->
     <string name="pref_statusbar_icons_title">Statusbar Icons</string>
@@ -88,10 +89,6 @@
     <string name="pref_statusbar_clock_am_pm_style_normal">Normal</string>
     <string name="pref_statusbar_clock_am_pm_style_small">Small</string>
     <string name="pref_statusbar_clock_am_pm_style_gone">Hidden</string>
-    <string name="pref_statusbar_quick_pulldown_title">Quick QS Pulldown</string>
-    <string name="pref_statusbar_quick_pulldown_summary">Expand Quick Settings in a single swipe</string>
-    <string name="pref_statusbar_custom_header_title">Time Contextual Header</string>
-    <string name="pref_statusbar_custom_header_summary">Enable notification panel header image</string>
     <string name="pref_status_bar_charge_color_title">Set statusbar battery icon color when charging</string>
     <string name="pref_status_bar_battery_style_tile_title">Custom battery tile style</string>
     <string name="pref_status_bar_battery_style_tile_summary">Allow to set the same icon style chosen for the statusbar battery</string>
@@ -103,6 +100,10 @@
     <string name="pref_status_bar_battery_text_symbol_default">Disabled</string>
     <string name="pref_status_bar_battery_text_symbol_flash">Flash</string>
     <string name="pref_status_bar_battery_text_symbol_tilde">Tilde</string>
+
+    <!-- Statusbar >> Quick Settings -->
+    <string name="pref_statusbar_quick_pulldown_title">Quick Pulldown</string>
+    <string name="pref_statusbar_quick_pulldown_summary">Expand Quick Settings in a single swipe</string>
 
     <!-- System >> Network -->
     <string name="system_network_title">Network</string>
