Toolbox: fix strings
Change-Id: Ide35ff618f3bb0ea11577b072da4db300d70320a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -77,35 +77,36 @@
     <!-- Statusbar >> General -->
     <string name="pref_statusbar_icons_title">Statusbar Icons</string>
     <string name="pref_statusbar_icons_summary">Settings to control statusbar icons</string>
-    <string name="pref_statusbar_batt_style_title">Battery style</string>
-    <string name="pref_statusbar_batt_style_summary">Choose a battery icon style</string>
+    <string name="pref_statusbar_batt_style_title">Battery icon</string>
+    <string name="pref_statusbar_batt_style_summary">Change the battery icon in the statusbar</string>
     <string name="pref_statusbar_batt_style_portrait">Portrait</string>
     <string name="pref_statusbar_batt_style_landscape">Landscape</string>
     <string name="pref_statusbar_batt_style_circle">Circle</string>
     <string name="pref_statusbar_batt_style_dotted_circle">Dotted Circle</string>
     <string name="pref_statusbar_batt_style_text">Text</string>
     <string name="pref_statusbar_batt_style_hidden">Hidden</string>
-    <string name="pref_statusbar_batt_percent_title">Battery percent</string>
-    <string name="pref_statusbar_batt_percent_summary">Choose a battery percent style</string>
+    <string name="pref_statusbar_batt_percent_title">Battery percent style</string>
+    <string name="pref_statusbar_batt_percent_summary">Choose how to display battery percentage</string>
     <string name="pref_statusbar_batt_percent_hidden">Hidden</string>
     <string name="pref_statusbar_batt_percent_inside">Inside</string>
     <string name="pref_statusbar_batt_percent_outside">Outside</string>
     <string name="pref_statusbar_clock_am_pm_style_title">Clock AM/PM style</string>
-    <string name="pref_statusbar_clock_am_pm_style_summary">Choose a clock AM/PM style</string>
+    <string name="pref_statusbar_clock_am_pm_style_summary">Set the clock AM/PM style</string>
     <string name="pref_statusbar_clock_am_pm_style_normal">Normal</string>
     <string name="pref_statusbar_clock_am_pm_style_small">Small</string>
     <string name="pref_statusbar_clock_am_pm_style_gone">Hidden</string>
-    <string name="pref_status_bar_charge_color_title">Set statusbar battery icon color when charging</string>
-    <string name="pref_status_bar_battery_style_tile_title">Custom battery tile style</string>
-    <string name="pref_status_bar_battery_style_tile_summary">Allow to set the same icon style chosen for the statusbar battery</string>
-    <string name="pref_status_bar_battery_charge_text_title">Statusbar battery charging percent</string>
-    <string name="pref_status_bar_battery_charge_text_summary_on">Show the battery percentage outside the icon while charging</string>
-    <string name="pref_status_bar_battery_charge_text_summary_off">Show the battery percentage inside the icon while charging</string>
-    <string name="pref_status_bar_battery_text_symbol_title">Charging symbol near percentage text</string>
-    <string name="pref_status_bar_battery_text_symbol_dialog">Available charging symbols</string>
-    <string name="pref_status_bar_battery_text_symbol_default">Disabled</string>
-    <string name="pref_status_bar_battery_text_symbol_flash">Flash</string>
-    <string name="pref_status_bar_battery_text_symbol_tilde">Tilde</string>
+    <string name="pref_status_bar_charge_color_title">Set the battery icon color</string>
+    <string name="pref_statusbar_batt_style_tile_title">Sync the QS battery tile icon</string>
+    <string name="pref_statusbar_batt_style_tile_summary">Sync the tile icon to the current statusbar icon</string>
+    <string name="pref_statusbar_batt_charge_text_title">Show percentage while charging</string>
+    <string name="pref_statusbar_batt_charge_text_summary_on">Always show charging percent</string>
+    <string name="pref_statusbar_batt_charge_text_summary_off">Do not show charging percent</string>
+    <string name="pref_statusbar_batt_text_symbol_title">Display a charging symbol</string>
+    <string name="pref_statusbar_batt_text_symbol_summary">Choose a charging symbol to display next the percentage</string>
+    <string name="pref_statusbar_batt_text_symbol_dialog">Available charging symbols</string>
+    <string name="pref_statusbar_batt_text_symbol_default">Disabled</string>
+    <string name="pref_statusbar_batt_text_symbol_flash">Flash</string>
+    <string name="pref_statusbar_batt_text_symbol_tilde">Tilde</string>
 
     <!-- Statusbar >> Quick Settings -->
     <string name="pref_statusbar_quick_pulldown_title">Quick Pulldown</string>
